--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 placeholder="Password">
             </div>
             <div class="d-grid gap-2 px-2">
-              <a href="dashbord.html" class="btn btn-primary mb-3" type="button">Login <i class="fa-solid fa-right-to-bracket"></i></a>
+              <a href="dashboard.html" class="btn btn-primary mb-3" type="button">Login <i class="fa-solid fa-right-to-bracket"></i></a>
             </div>
           </form>
         </div>
